@@ -1435,11 +1435,12 @@ BEGIN
     LTEXT           "Reflection Strength (0..100)",IDC_STATIC3,7,68,93,8
     EDITTEXT        IDC_REFLECTION_PLAYFIELD,101,66,20,12,ES_AUTOHSCROLL
     GROUPBOX        "Ball",IDC_STATIC4,2,81,121,94
-    COMBOBOX        DISPID_Image3,7,104,113,120,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        DISPID_Image4,7,129,113,109,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "&Ball Image",IDC_STATIC5,7,94,74,8
+    CONTROL         "Spherical Map",IDC_BALL_SPHERICAL_MAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,61,94,59,8
+    COMBOBOX        DISPID_Image3,7,104,113,120,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "&Decal",IDC_STATIC6,7,119,40,8
-    CONTROL         "Logo Mode",IDC_BALL_DECAL_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,69,119,49,8
+    CONTROL         "Logo Mode",IDC_BALL_DECAL_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,61,119,58,8
+    COMBOBOX        DISPID_Image4,7,129,113,109,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Reflection of Playfield (0..X)",IDC_STATIC7,7,148,90,9
     EDITTEXT        IDC_BALLPLAYFIELD_REFLECTION,100,145,20,12,ES_AUTOHSCROLL
     LTEXT           "Default Bulb Intensity Scale",IDC_STATIC8,7,161,90,9
